# BusyBeaverReduction

./: .env-sample  .gitignore  README.md  docker-compose.yml
busy_beaver_reduction/: .gitignore  Cargo.toml
busy_beaver_reduction/src/: main.rs
busy_beaver_reduction/src/database/: manager.rs  mod.rs  runner.rs
busy_beaver_reduction/src/delta/: mod.rs  transition.rs  transition_function.rs
busy_beaver_reduction/src/filter/: filter.rs  filter_compile.rs  filter_cyclers.rs  filter_escapees.rs  filter_generate.rs  filter_runtime.rs  filter_translated_cyclers.rs  mod.rs
busy_beaver_reduction/src/generator/: generator.rs  generator_transition_function.rs  mod.rs
busy_beaver_reduction/src/logger/: logger.rs
busy_beaver_reduction/src/mediator/: mediator.rs
busy_beaver_reduction/src/turing_machine/: direction.rs  generator.rs  mod.rs  runner.rs  special_states.rs  turing_machine.rs
database/: schema.sql
