[package]
name = "busy_beaver_reduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
dotenv = "0.15.0"
env_logger = "0.11"
itertools = "0.10.0"
log = "0.4" 
rayon = "1.5"
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "macros", "mysql"]}
tokio = { version = "1", features = ["full"] }
threadpool = "1.8.1"